# COMP479

./: .gitignore  README.md  create.sh  pyproject.toml  scrapy.cfg  stopwords.txt  stopwords150.txt  stopwords30.txt
index/: block1.pickle  block10.pickle  block100.pickle  block1000.pickle  block1001.pickle  block1002.pickle  block1003.pickle  block1004.pickle  block1005.pickle  block1006.pickle  block1007.pickle  block1008.pickle  block1009.pickle  block101.pickle  block1010.pickle  block1011.pickle  block1012.pickle  block1013.pickle  block1014.pickle  block1015.pickle  block1016.pickle  block1017.pickle  block1018.pickle  block1019.pickle  block102.pickle  block1020.pickle  block1021.pickle  block1022.pickle  block1023.pickle  block1024.pickle  block1025.pickle  block1026.pickle  block1027.pickle  block1028.pickle  block1029.pickle  block103.pickle  block1030.pickle  block1031.pickle  block1032.pickle  block1033.pickle  (+5702 more)
output/: 1_bm25.json  1_or.json  2_bm25.json  3_or.json  block6.json  challengeQueriesCompressed.json  challengeQueriesNormal.json  index.pickle  indexCompressed.pickle  mostcommon.json  queryresult.json  sampleQueries.json  sampleQueriesNormal.json
p1/: README.md  p1.code-workspace  pyproject.toml  stopwords.txt
p1/output/: block3.json
p1/p1/: block-1-reader.py  solutions.py
p1/report/: report.tex
reuters/: feldman-cia-worldfactbook-data.txt  reut2-000.sgm  reut2-001.sgm  reut2-002.sgm  reut2-003.sgm  reut2-004.sgm  reut2-005.sgm  reut2-006.sgm  reut2-007.sgm  reut2-008.sgm  reut2-009.sgm  reut2-010.sgm  reut2-011.sgm  reut2-012.sgm  (+8 more)
(+5812 files in other folders)
