[tool.poetry]
name = "ir"
version = "0.1.0"
description = ""
authors = ["François LaBerge <fgrclaberge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
lxml = "*"
nltk = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
