[tool.poetry]
name = "p1"
version = "0.1.0"
description = ""
authors = ["FGRCL <35940434+FGRCL@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
lxml = "*"
nltk = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
